# VideoPlay

./: .gitignore  README.md  settings.gradle
app/src/androidTest/java/com/liuxin/audioplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/liuxin/audioplay/: LxSurfaceView.java  MainActivity.java  SecondActivity.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/liuxin/audioplay/: ExampleUnitTest.java
audiolib/src/androidTest/java/com/liuxin/audiolib/: ExampleInstrumentedTest.java
audiolib/src/main/: AndroidManifest.xml
audiolib/src/main/cpp/: Audio.cpp  AvPacketQuene.cpp  AvPacketQuene.h  CallJava.cpp  LXFFmpeg.cpp  PlayStatus.h  Video.cpp  Video.h  mylog.h  native-lib.cpp
audiolib/src/main/cpp/egl/: EglThread.cpp  EglThread.h  Egl_Helper.cpp
audiolib/src/main/cpp/opengl/: BaseOpenGL.cpp  BaseOpenGL.h  OpenGLCommonFilter.cpp  OpenGLCommonFilter.h  OpenGLFbo.cpp  OpenGLGreyFilter.cpp  OpenGLGreyFilter.h  OpenGLHelper.cpp  OpenGLHelper.h  OpenGLYUVFilter.cpp  OpenGLYUVFilter.h
audiolib/src/main/java/com/liuxin/audiolib/: LXPlayer.java  OnCompleteListener.java  OnDBListener.java  OnErrorListener.java  OnLoadListener.java  OnPlayStatusListener.java  OnPrepareListener.java  OnProgressListener.java  VideoHardSupportUtils.java
audiolib/src/test/java/com/liuxin/audiolib/: ExampleUnitTest.java
videolib/: CMakeLists.txt
videolib/src/androidTest/java/com/liuxin/videolib/: ExampleInstrumentedTest.java
videolib/src/main/: AndroidManifest.xml
videolib/src/main/cpp/: Audio.h  CallJava.h  LXFFmpeg.cpp  LXFFmpeg.h  PlayStatus.cpp  Video.cpp  Video.h  native-lib.cpp
videolib/src/main/cpp/egl/: EglThread.cpp  EglThread.h  Egl_Helper.cpp  Egl_Helper.h
videolib/src/main/cpp/opengl/: BaseOpenGL.cpp  BaseOpenGL.h  OpenGLCommonFilter.cpp  OpenGLFbo.h  OpenGLHelper.cpp  OpenGLHelper.h  OpenGLYUVFilter.cpp  OpenGLYUVFilter.h
videolib/src/main/cpp/util/: MatrixUtils.h
videolib/src/main/java/com/liuxin/videolib/: LXPlayer.java  OnCompleteListener.java  OnDBListener.java  OnErrorListener.java  OnLoadListener.java  OnPlayStatusListener.java  OnPrepareListener.java  OnProgressListener.java  VideoHardSupportUtils.java
videolib/src/main/jniLibs/includes/soundtouch/: STTypes.h
videolib/src/main/res/values/: strings.xml
videolib/src/test/java/com/liuxin/videolib/: ExampleUnitTest.java
